# Huai-Coder

./: README.md
Huai-Coder/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
Huai-Coder/backend/: .env.example  alembic.ini  mcp.example.json  pyproject.toml  start_server.py
Huai-Coder/backend/app/: agent.py  config.py  context.py  database.py  executor.py  llm.py  local_runner.py  main.py  mcp_smoke.py  memory.py  models.py  planner.py  registry.py  runner_server.py  security.py  tools.py
Huai-Coder/backend/app/agents/: base.py  registry.py  subagent.py
Huai-Coder/backend/app/mcp/: __init__.py  client.py  models.py
Huai-Coder/backend/migrations/: env.py  script.py.mako
Huai-Coder/backend/migrations/versions/: 0001_initial.py  0002_approvals_audit.py  0003_plan_execute.py  0004_memory_context.py  0005_project_workspace_name.py  0006_mcp_browser_sessions.py
Huai-Coder/backend/tests/: test_agent_budget.py  test_approvals.py  test_local_runner.py  test_mcp_client.py  test_memory_context.py  test_security.py  test_subagents.py  test_tools.py
Huai-Coder/deploy/: docker-compose.yml
Huai-Coder/docs/: improvement-plan.md  local-runner.md  local-start.md  mcp-browser-integration-change.md  memory-and-context-design.md  sub-agent-architecture.md
Huai-Coder/docs/agent-web/: phase-01-foundation.md  phase-02-langgraph-react.md  phase-06-rag.md  (+8 more)
Huai-Coder/frontend/: package-lock.json  package.json  vite.config.ts
Huai-Coder/scripts/: start-local.cmd  start-local.ps1  stop-local.cmd  stop-local.ps1
(+3 files in other folders)
