[project]
name = "huai-coder-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.32,<1", "sqlalchemy[asyncio]>=2.0,<3", "asyncpg>=0.30,<1", "psycopg[binary]>=3.2,<4", "pydantic-settings>=2.6,<3", "langgraph>=0.2,<1", "langgraph-checkpoint-postgres>=2.0,<4", "httpx>=0.27,<1", "alembic>=1.14,<2"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1"]

[tool.setuptools.packages.find]
include = ["app*"]
